# lyrics-classification

./: .gitignore  README.md  pyproject.toml
lyrics_classification/: 01_explore.ipynb  02_dataset.ipynb  03_model.ipynb  04_inference.ipynb
